--- a/style.css
+++ b/style.css
@@ -1,81 +1,155 @@
-body{
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
+body {
+			margin: 0;
+			padding: 0;
+			font-family: sans-serif;
+			line-height: 1.9em;
+		    color: #5E6677;
 }
-nav{
+
+#brandlogo {
+		position: absolute;
+		width: 40px;
+		float: left;
+		padding: 15px 0 0 30px;
+		margin-bottom: 10px;
+
+		}
+
+		nav {
 	
-	width: 100%;
-    z-index: 10;
-    background-color: #FFF;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
-    height: 65px;
-    position: fixed;
-  
+			width: 100%;
+		    z-index: 10;
+		    background-color: #FFF;
+		    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+		    height: 65px;
+		    position: fixed;
+		    box-sizing: border-box;
+		  
 
-}
- .nav-right {
-    	width: 80%;
-    	margin: 0 auto;
-    	padding: 0;
-    	
-    
-    } 
+		}
+		  nav .toggle {
 
-    .nav-right a {
-		text-decoration: none;
-		display: inline-block;
-		padding: 20px;
-    	color:  #e18fdc;
-    	margin: 5px 0;
-    	box-sizing: border-box;
+    		    display: block;
+    			width: 100%;
+    			
+    	   } 
 
     	
-    }	
-
-    .nav-right a:hover{
-    	background-color: #beb8ad;
-    	color: #fff;
-    }
-    nav .toggle {
-    	width: 100%;
-    	color:  #e18fdc;
-    	text-decoration: none;
-    	text-align: right;
-    	padding: 10px 20px;
-    	box-sizing: border-box;
-    	font-size: 35px;
-    	background: #fff;
-    	float: right;
-    	display: none;
-    	margin-bottom: 15px;
-
-    }
-
-    @media (max-width: 540px) {
-    	nav .toggle {
-    		display: block;
-    	} 
-    	 
-    
-
 		 .nav-right {
+
 		    		width: 100%;
 		    		display: none;
 		    		background: #FFE0F2;
-
+		    		margin: 10px auto;
+			    	padding-top: 30px;
+			    	z-index: 1000;
+			    	box-sizing: border-box;
+			    	
 		    	   } 
+		
 
 		  .nav-right a {
 
 		  	display: block;
 		  	text-align: center;
-		  	color: #5E6677;
+		  	color: #e18fdc;
 		  	z-index: 10;
-			
-		        }
+			text-decoration: none;
+			padding: 20px;
+			margin: 5px 0;
+    	    box-sizing: border-box;
+
+		    }
+		    .nav-right a:hover{
+
+	    	background-color: #beb8ad;
+	    	color: #fff;
+
+   			 }
+
+		    nav .toggle {
+	    	width: 100%;
+	    	color:  #e18fdc;
+	    	text-decoration: none;
+	    	text-align: right;
+	    	padding: 20px 30px 10px 30px;
+	    	box-sizing: border-box;
+	    	font-size: 37px;
+	    	background: #fff;
+	    	float: right;
+	    	margin-bottom: 10px;
+	    
+    	}
 
 		 .active {
 		 	display: block;
 		 }  
-    }
+    
+
+    @media screen and (min-width: 541px) {
+    	
+		 
+	    	body{
+				margin: 0;
+				padding: 0;
+				font-family: sans-serif;
+				line-height: 1.9em;
+			    color: #5E6677;
+			}
+
+			.brandlogo {
+
+				  position: absolute;
+				  width: 45px;
+				  float: left;
+				  padding: 15px 0 0 20px;
+				
+			}
+
+		nav {
+
+			width: 100%;
+		    z-index: 10;
+		    background-color: #FFF;
+		    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
+		    height: 65px;
+		    position: fixed;
+		    box-sizing: border-box;
+		   
+	 	}
+
+	 .nav-right {
+	 	    width: 90%;	
+			margin: 0 auto;
+			height: 65px;
+		    float : right;
+			padding-top: 0px;
+			box-sizing: border-box;
+	        display: block;
+	        background: #fff;
+	        padding-left: 30px;
+
+
+       }
+
+    .nav-right  a {
+
+    	text-decoration: none;
+    	padding: 15px 15px;
+    	font-size: 1em;
+    	color: #E18FDC;
+    	font-weight: 100px;
+    	display: inline-block;
+    	font-size: 1em;
+    	
+    } 
+
+   
+ 
+   nav .toggle {
+	    	
+	    	display: none;
+	    	
+	    }
+
+}
